# google-drive-manager-mcp

./: .gitignore  README.md  pyproject.toml
docs/: gcp_oauth_setup.md
src/google_drive_manager/: server.py
src/google_drive_manager/adapters/: config.py  google_drive_adapter.py  oauth_flow.py  pandoc_adapter.py
src/google_drive_manager/application/: use_cases.py
src/google_drive_manager/domain/: models.py  ports.py
tests/: fakes.py  test_google_drive_adapter.py  test_use_cases.py
